Fix overflow problem on paragraphs

--- a/pancakeswap/src/components/shared/paragraph/_paragraph.scss
+++ b/pancakeswap/src/components/shared/paragraph/_paragraph.scss
@@ -140,7 +140,7 @@
     display: flex;
     flex-direction: column;
     padding: 32px 24px;
-    width: 100vw;
+    //width: 100vw;
     height: 44.6rem;
     overflow: hidden;
   }
@@ -148,9 +148,9 @@
   .section-content {
     display: flex;
     flex-direction: column-reverse;
-    align-items: flex-end;
+    align-items: flex-start;
     justify-content: center;
-    height: 370px;
+    //height: 370px;
     width: 100%;
     position: relative;
     border: 1px solid red;
@@ -158,11 +158,12 @@
   .section-content-title {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-content: flex-start;
+    align-items: stretch;
     flex: 1 1 0%;
-    height: 155px;
+    //height: 155px;
     border: 1px solid red;
-    width: 100vw;
+    width: 100%;
     position: relative;
     //order: 2;
   }
@@ -190,7 +191,7 @@
     height: 192px;
     width: 192px;
     margin-bottom: 34px;
-    align-self: flex-start;
+    align-self: flex-end;
     position: relative;
     //order: 1;
     border: 1px solid red;
@@ -204,7 +205,7 @@
     gap: 16px;
     width: 100%;
     height: 183px;
-    //margin: 0 auto;
+    margin: 30px 0px;
     grid-template-areas:
       "a d"
       "b e"
